<?xml version="1.0"?>
<package format="2">
  <name>ndt_omp_ros2</name>
  <version>0.0.0</version>
  <description>OpenMP boosted NDT and GICP algorithms</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <!-- NEW: -->
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
